--- a/main.html
+++ b/main.html
@@ -7,6 +7,76 @@
 </head>
 
 <body>
+	<h3 align="center" >HTML Assignment #3</h3>
+	<table id="table-1"style="width: 100%; height: 100%" class="middle" border="1" cellspacing="0">
+		<tr>
+			<td id="t11">left</td>
+			<td id="t12" class="center">center</td>
+			<td id="t13" class="right">right</td>
+		</tr>
+		<tr>
+			<td>left</td>
+			<td class="center">center</td>
+			<td class="right">right</td>
+		</tr>
+		<tr>
+			<td>left</td>
+			<td class="center">center</td>
+			<td class="right">right</td>
+		</tr>
+	</table>
+	<br>
+	<br>
+	<table id="table-2" style="width:100%; height:100%">
+		<tr>
+			<td id="t21"colspan="6"><br></td>
+		</tr>
+		<tr>
+			<td rowspan="5"></td>
+			<td><br></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td><br></td>
+			<td colspan="3" rowspan="2"></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td><br></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td><br></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			
+		</tr>
+		<tr>
+			<td colspan="6"><br></td>
+		</tr>
+	</table>
+	<br>
+	<br>
+	<table id="table-3" style="width:100%; height:100%">
+		<tr class="green">
+			<td><br></td>
+		</tr>
+		<tr>
+			<td id="t-imgage">
+				<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRWe0qYh7AErgzN5mE_h-_kCkbZwcDDUjB9c_g8YBOrvjroBvdR">
+			</td>
+		</tr>
+		<tr class="blue">
+			<td>
+				<br>
+			</td>
+		</tr>
+	</table>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
