--- a/main.html
+++ b/main.html
@@ -27,7 +27,7 @@
 	</table>
 	<br>
 	<br>
-	<table id="table-2" style="width:100%; height:100%">
+	<table class="middle" id="table-2" style="width:100%; height:100%">
 		<tr>
 			<td id="t21"colspan="6"><br></td>
 		</tr>
@@ -62,13 +62,13 @@
 	</table>
 	<br>
 	<br>
-	<table id="table-3" style="width:100%; height:100%">
+	<table class="middle" id="table-3" style="width:100%; height:100%">
 		<tr class="green">
 			<td><br></td>
 		</tr>
 		<tr>
-			<td id="t-imgage">
-				<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRWe0qYh7AErgzN5mE_h-_kCkbZwcDDUjB9c_g8YBOrvjroBvdR">
+			<td>
+				<img id="t-imgage" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRWe0qYh7AErgzN5mE_h-_kCkbZwcDDUjB9c_g8YBOrvjroBvdR">
 			</td>
 		</tr>
 		<tr class="blue">
