--- a/main.html
+++ b/main.html
@@ -68,7 +68,7 @@
 		</tr>
 		<tr>
 			<td>
-				<img id="t-imgage" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRWe0qYh7AErgzN5mE_h-_kCkbZwcDDUjB9c_g8YBOrvjroBvdR">
+				<img id="t-image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRWe0qYh7AErgzN5mE_h-_kCkbZwcDDUjB9c_g8YBOrvjroBvdR">
 			</td>
 		</tr>
 		<tr class="blue">
