--- a/main.html
+++ b/main.html
@@ -66,9 +66,9 @@
 		<tr class="green">
 			<td><br></td>
 		</tr>
-		<tr>
+		<tr id="t-image">
 			<td>
-				<img id="t-image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRWe0qYh7AErgzN5mE_h-_kCkbZwcDDUjB9c_g8YBOrvjroBvdR">
+				<img  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRWe0qYh7AErgzN5mE_h-_kCkbZwcDDUjB9c_g8YBOrvjroBvdR">
 			</td>
 		</tr>
 		<tr class="blue">
